<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hiraeth Flame</string>
    <string name="nav_library">Library</string>
    <string name="nav_camera">Camera</string>
    <string name="nav_albums">Albums</string>
    <string name="splash_credit">\"A dragon breaths fire with no smoke.\"</string>
    <string name="splash_author">- Christopher Lee Cajes</string>
</resources>
